fix: error fixed

--- a/src/components/TaskCard.css
+++ b/src/components/TaskCard.css
@@ -22,7 +22,7 @@
 .task_text {
 	font-size: 18px;
 	/* font-weight: 600; */
-	margin-bottom: 15px;
+	/* margin-bottom: 15px; */
 }
 
 .task_text.input {
